Changed modal size, copyright name & added margin

--- a/availability.html
+++ b/availability.html
@@ -84,7 +84,7 @@
   </div>
 
   <div id="reserveModal" class="modal fade" role="dialog">
-    <div class="modal-dialog modal-lg" role="document">
+    <div class="modal-dialog modal-md" role="document">
       <div class="modal-content">
         <div class="modal-header">
           <h3 class="modal-title">Make a Reservation</h3>
@@ -158,7 +158,7 @@
               </div>
             </div>
             <div class="row">
-              <div class="col">
+              <div class="col text-right">
                 <button type="submit" class="btn btn-info">Submit</button>
                 <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
               </div>
@@ -188,8 +188,8 @@
         </div>
       </div>
       <div class="row">
-        <div class="col-12 text-center">
-          &copy;2022 JM Developments
+        <div class="col-12 text-center mb-4">
+          &copy;2022 JM Software Developments
         </div>
       </div>
     </div>
