--- a/contact.html
+++ b/contact.html
@@ -103,13 +103,7 @@
           <div class="form-group row">
             <label class="col-md-2" for="date-of-arrival">Date of Arrival</label>
             <div class="col-md-3">
-              <input id="date-of-arrival" type="date">
-            </div>
-          </div>
-          <div class="form-group row">
-            <label class="col-md-2" for="date-of-checkout">Date of Checkout</label>
-            <div class="col-md-3">
-              <input id="date-of-checkout" type="date">
+              <input class="form-control" id="date-of-arrival" type="date">
             </div>
           </div>
           <div class="form-group row">
@@ -119,7 +113,7 @@
             </div>
           </div>
           <div class="form-group row">
-            <div class="offset-md-2 col-md-10">
+            <div class="col-md-12 text-center">
               <button type="submit" class="btn btn-info">Submit</button>
             </div>
           </div>
@@ -148,8 +142,8 @@
         </div>
       </div>
       <div class="row">
-        <div class="col-12 text-center">
-          &copy;2022 JM Developments
+        <div class="col-12 text-center mb-4">
+          &copy;2022 JM Software Developments
         </div>
       </div>
     </div>
