--- a/index.html
+++ b/index.html
@@ -69,18 +69,26 @@
   </div>
 
   <div class="p-3 mb-2 bg-info text-white">
-    <h2>Enjoy the California sun</h2>
-    <p>OC Vacation Home is located in Garden Grove, California. Enjoy great sunset
-      views from your window and a view of
-      Disneyland fireworks from the balcony. </p>
-    <p>The space includes 2 bedrooms and 2 bathrooms. The property has luxury
-      vinyl plank laminated wood flooring, complemented with soft blue wall colors and linen white ceiling and
-      baseboards. The kitchen was upgraded to include a Farmhouse single basin sink, gleaming quartz countertops and
-      stainless steel appliances. </p>
-    <p>You will also be able to enjoy the community amenities of a clubhouse,
-      fully-equipped
-      fitness center, pool, spa, and barbecue areas.</p>
+    <div class="container">
+      <div class="row row-content">
+        <div class="col">
+          <h2>Enjoy the California sun</h2>
+          <p>OC Vacation Home is located in Garden Grove, California. Enjoy great sunset
+            views from your window and a view of
+            Disneyland fireworks from the balcony. </p>
+          <p>The space includes 2 bedrooms and 2 bathrooms. The property has luxury
+            vinyl plank laminated wood flooring, complemented with soft blue wall colors and linen white ceiling and
+            baseboards. The kitchen was upgraded to include a Farmhouse single basin sink, gleaming quartz countertops
+            and
+            stainless steel appliances. </p>
+          <p>You will also be able to enjoy the community amenities of a clubhouse,
+            fully-equipped
+            fitness center, pool, spa, and barbecue areas.</p>
+        </div>
+      </div>
+    </div>
   </div>
+
   <footer class="site-footer">
     <div class="container">
       <div class="row">
@@ -100,8 +108,8 @@
         </div>
       </div>
       <div class="row">
-        <div class="col-12 text-center">
-          &copy;2022 JM Developments
+        <div class="col-12 text-center mb-4">
+          &copy;2022 JM Software Developments
         </div>
       </div>
     </div>
