--- a/overview.html
+++ b/overview.html
@@ -57,7 +57,7 @@
 
     <ul class="nav nav-pills sticky-top bg-light mb-3" id="pills-tab" role="tablist">
       <li class="nav-item">
-        <a class="nav-link text-info" href="#amenities" aria-selected="true">Amenities</a>
+        <a class="nav-link text-info" href="#amenitiesTitle" aria-selected="true">Amenities</a>
       </li>
       <li class="nav-item">
         <a class="nav-link text-info" href="#floorplan" aria-selected="false">Floorplan</a>
@@ -68,10 +68,10 @@
     </ul>
 
     <div class="container">
-      <h2 class="pt-5" id="amenities">Amenities</h2>
+      <h2 class="pt-5" id="amenitiesTitle">Amenities</h2>
       <div class="row row-content">
-        <div class="card-deck">
-          <div class="card border mb-3">
+        <div class="card-deck" id="amenities">
+          <div class="card mb-3">
             <img class="card-img-top" src="img/amenities-imgs/fitness-center-1.jpeg" alt="Fitness Center">
             <div class="card-body">
               <h3 class="card-title">Fitness Center</h5>
@@ -79,7 +79,7 @@
             </div>
           </div>
 
-          <div class="card border mb-3">
+          <div class="card mb-3">
             <img class="card-img-top" src="img/amenities-imgs/pool-1.jpeg" alt="Pool">
             <div class="card-body">
               <h3 class="card-title">Pool and Spa</h3>
@@ -87,7 +87,7 @@
             </div>
           </div>
 
-          <div class="card border mb-3">
+          <div class="card mb-3">
             <img class="card-img-top" src="img/amenities-imgs/courtyard-1.jpeg" alt="Courtyard">
             <div class="card-body">
               <h3 class="card-title">Courtyard</h3>
@@ -157,8 +157,8 @@
           </div>
         </div>
         <div class="row">
-          <div class="col-12 text-center">
-            &copy;2022 JM Developments
+          <div class="col-12 text-center mb-4">
+            &copy;2022 JM Software Developments
           </div>
         </div>
       </div>
