--- a/reviews.html
+++ b/reviews.html
@@ -27,7 +27,7 @@
       </button>
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
-          <li class="nav-item active">
+          <li class="nav-item">
             <a class="nav-link" href="index.html">Home</a>
           </li>
           <li class="nav-item ">
@@ -109,8 +109,8 @@
         </div>
       </div>
       <div class="row">
-        <div class="col-12 text-center">
-          &copy;2022 JM Developments
+        <div class="col-12 text-center mb-4">
+          &copy;2022 JM Software Developments
         </div>
       </div>
     </div>
