--- a/things-to-do.html
+++ b/things-to-do.html
@@ -27,7 +27,7 @@
       </button>
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
-          <li class="nav-item active">
+          <li class="nav-item">
             <a class="nav-link" href="index.html">Home</a>
           <li class="nav-item ">
             <a class="nav-link" href="overview.html">Overview</a>
@@ -45,7 +45,7 @@
             <a class="nav-link" href="reviews.html">Reviews</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Contact</a>
+            <a class="nav-link" href="contact.html">Contact</a>
           </li>
         </ul>
       </div>
@@ -140,20 +140,20 @@
       <div class="col col-sm-8 offset-sm-2">
         <h4 class="text-center pt-5" id="places">Places to Visit</h4>
         <ul class="list-group border-info mb-3">
-          <li class="list-group-item">Disneyland, Disney California Adventure, Downtown Disney: 1.8 mile away</li>
-          <li class="list-group-item">Great Wolf Lodge: 0.8 mile away</li>
-          <li class="list-group-item">Anaheim Convention Center: 1.2 mile away</li>
-          <li class="list-group-item">Anaheim GardenWalk: 1.7 mile away</li>
-          <li class="list-group-item">The Outlets at Orange: 2 miles away</li>
-          <li class="list-group-item">Discovery Cube Orange County: 3.8 miles away</li>
-          <li class="list-group-item">Honda Center: 3.8 miles away</li>
-          <li class="list-group-item">Muzeo: 3.8 miles away</li>
-          <li class="list-group-item">Irvine Spectrum: 15 miles away</li>
-          <li class="list-group-item">Newport Beach: 17 miles away</li>
-          <li class="list-group-item">Huntington Beach: 15 miles away</li>
-          <li class="list-group-item">Laguna Beach: 23 miles away</li>
-          <li class="list-group-item">Los Angeles: 30 miles away</li>
-          <li class="list-group-item">San Diego: 93 miles away</li>
+          <li class="list-group-item">Disneyland, Disney California Adventure, Downtown Disney: 1.8 miles</li>
+          <li class="list-group-item">Great Wolf Lodge: 0.8 mile</li>
+          <li class="list-group-item">Anaheim Convention Center: 1.2 miles</li>
+          <li class="list-group-item">Anaheim GardenWalk: 1.7 miles</li>
+          <li class="list-group-item">The Outlets at Orange: 2 miles</li>
+          <li class="list-group-item">Discovery Cube Orange County: 3.8 miles</li>
+          <li class="list-group-item">Honda Center: 3.8 miles</li>
+          <li class="list-group-item">Muzeo: 3.8 miles</li>
+          <li class="list-group-item">Irvine Spectrum: 15 miles</li>
+          <li class="list-group-item">Newport Beach: 17 miles</li>
+          <li class="list-group-item">Huntington Beach: 15 miles</li>
+          <li class="list-group-item">Laguna Beach: 23 miles</li>
+          <li class="list-group-item">Los Angeles: 30 miles</li>
+          <li class="list-group-item">San Diego: 93 miles</li>
         </ul>
       </div>
     </div>
@@ -223,8 +223,8 @@
         </div>
       </div>
       <div class="row">
-        <div class="col-12 text-center">
-          &copy;2022 JM Developments
+        <div class="col-12 text-center mb-4">
+          &copy;2022 JM Software Developments
         </div>
       </div>
     </div>
