--- a/things-to-do.html
+++ b/things-to-do.html
@@ -6,9 +6,11 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
+  <!-- build:css css/main.css -->
   <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css" />
   <link rel="stylesheet" href="node_modules/font-awesome/css/font-awesome.min.css" />
   <link rel="stylesheet" href="css/styles.css">
+  <!-- endbuild -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Sansita+Swashed&display=swap" rel="stylesheet">
@@ -68,7 +70,7 @@
     <h1>Things to Do</h1>
     <div class="row row-content text-center">
       <div class="col-md-8 offset-md-2">
-        <div id="thingsToDoCarousel" class="carousel slide" data-ride="carousel">
+        <div id="thingsToDoCarousel" class="carousel slide" data-ride="carousel" data-pause="false">
           <div class="carousel-inner">
             <div class="carousel-item active">
               <img class="d-block w-100 img-fluid" src="img/places-imgs/disneyland.jpg" alt="Disneyland">
@@ -231,9 +233,11 @@
     </div>
   </footer>
 
+  <!-- build:js js/main.js -->
   <script src="node_modules/jquery/dist/jquery.slim.min.js"></script>
   <script src="node_modules/popper.js/dist/umd/popper.min.js"></script>
   <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
+  <!-- endbuild -->
 
 </body>
 
